# ragc

./: .gitignore  BUG_ANALYSIS.md  CLAUDE.md  COMPRESSION_BUG_HANDOFF.md  Cargo.toml  DEGENERATE_SPLIT_BUG.md  DEVELOPMENT_PLAN.md  EXACT_DIVERGENCE_FOUND.md  GENERATION.md  GROUPING_ALGORITHM_ANALYSIS.md  INTRA_SAMPLE_RACE.md  KNOWN_ISSUES.md  LICENSE  NEXT_STEPS.md  README.md  ROOT_CAUSE_ANALYSIS.md  SEGMENT_MERGING_BUG.md  SPLIT_ELIGIBILITY_BUG_FOUND.md  SPLIT_INVESTIGATION_PLAN.md  STATE.md  STATUS.md  STREAMING_API_STATUS.md  STREAMING_COMPRESSION_TODO.md  STREAMING_TEST_RESULTS.md  SUBSEQUENCE_REQUIREMENTS.md  ragc_micro_ffi.h  test_compat.sh  test_cpp_compat.sh  test_cross_compat.sh  test_cross_compatibility.sh  test_micro_integration.cpp  test_segmentation_exact.rs  test_zstd.rs  what-it-took.patch
.github/workflows/: ci.yml
compare_archives/: Cargo.toml
docs/: ACTUAL_ARCHITECTURE.md  ARCHIVE_DIFFERENCES_DEC2025.md  ARCHIVE_SIZE_INVESTIGATION.md  BARRIER_USAGE_PATTERN.md  BATCH_ARCHITECTURE_PLAN.md  BATCH_BOUNDARY_ANALYSIS.md  BATCH_MODE_REWRITE.md  BUFFERED_SEGMENTS_PATTERN.md  BUFFERED_VS_INDEXED.md  BUG_GROUPING_MISSING_KMER.md  BUG_INVESTIGATION_CHECKLIST.md  COMPRESSION_GAP.md  CORRECTNESS_VERIFICATION.md  CPP_AGC_ADVANCED_FEATURES.md  CPP_AGC_ARCHITECTURE.md  CPP_AGC_ARCHITECTURE_STUDY.md  CPP_AGC_BATCH_ARCHITECTURE.md  CPP_AGC_COMPARISON.md  CPP_AGC_EXACT_ARCHITECTURE.md  CPP_AGC_EXACT_IMPLEMENTATION.md  CPP_AGC_FORK_PLAN.md  CPP_AGC_GROUPING_ALGORITHM.md  CPP_AGC_IMPLEMENTATION_RESULTS.md  CPP_AGC_SEGMENT_GROUPING.md  CPP_AGC_SEGMENT_ORDERING.md  CPP_AGC_SPLITTING_ALGORITHM.md  DASHMAP_RESULTS.md  DEEP_PROFILING_RESULTS.md  FAI_INDEX_FIX.md  FFI_CODE_CHANGES.md  FFI_DATA_FLOW.md  FFI_IMPLEMENTATION_CHECKLIST.md  FFI_INDEX_WRITING_DESIGN.md  FFI_INTEGRATION_PLAN.md  FFI_INTEGRATION_SUMMARY.md  FINAL_INVESTIGATION_RESULTS.md  FIX4_BATCH_LEVEL_SORTING.md  FIX5_RESULTS.md  FIX_MULTITHREADING_CORRUPTION.md  FIX_PARALLEL_DETERMINISM.md  (+57 more)
ragc-cli/: Cargo.toml
ragc-cli/src/: inspect.rs  main.rs
ragc-common/: Cargo.toml
ragc-common/src/: archive.rs  collection.rs  hash.rs  lib.rs  stream_naming.rs  types.rs  varint.rs
ragc-common/tests/: test_archive_compat.rs  test_collection_compat.rs  test_hash.rs  test_varint.rs
ragc-core/: Cargo.toml  build.rs
ragc-core/examples/: basic_extraction.rs  check_contig_order.rs  compare_splitters.rs  debug_compression_order.rs  debug_compression_order.rs.disabled  debug_corruption.rs  debug_iterators.rs  parallel_extraction.rs  prefix_extraction.rs  test_base_validation.cpp  test_cpp_ffi.rs  test_get_part.cpp  test_identical.rs  test_kmer_extraction.cpp  test_kmer_pair.cpp  test_reverse_complement.cpp  test_rust_splitters.rs.disabled  test_rust_splitters_chr5.rs  test_rust_splitters_ffi.rs  test_rust_splitters_yeast5.rs.disabled  test_segment_boundary.cpp  test_segment_split.cpp  test_splitter_check.cpp  test_splitters_simple.rs.disabled  test_unified_iterator.rs  test_unified_iterator.rs.disabled  test_yeast.rs
ragc-core/src/: _compressor_streaming_old.rs  agc_compressor.rs  bloom_filter.rs  collection.rs  compressor.rs  compressor_streaming.rs  compressor_streaming.rs.backup  contig_compression.rs  contig_iterator.rs  decompressor.rs  env_cache.rs  genome_io.rs  hash.rs  kmer.rs  kmer_extract.rs  lib.rs  lz_diff.rs  lz_matcher.rs  memory_bounded_queue.rs  preprocessing.rs  priority_queue.rs  segment.rs  segment_buffer.rs  segment_compression.rs  splitters.rs  stream_naming.rs  streaming_compressor_queue.rs  streaming_compressor_queue_legacy.rs  task.rs  tuple_packing.rs  types.rs  varint.rs  worker.rs  zstd_pool.rs
ragc-core/src/ffi/: agc_compress.cpp  agc_compress.rs  agc_compressor_rust.cpp  agc_compressor_rust.h  agc_index.cpp  agc_index.rs  base_validation.rs  cost.cpp  find_splitters_in_contig.rs  kmer_helpers.rs  kmer_pair.rs  preprocessing.rs  reverse_complement.rs  segment_boundary.rs  segment_helpers.rs  segment_split.rs  splitter_check.rs  splitters.cpp  splitters.rs
ragc-core/tests/: cpp_compat.rs  ffi_archive_test.rs.disabled  test_archive_compat.rs  test_collection_compat.rs  test_compressor_roundtrip.rs  test_cost_parity.rs  test_fasta_parser.rs  test_hash.rs  test_indexed_iterator.rs  test_kmer.rs  test_kmer_extract.rs  test_layout_parity_external.rs  test_lz_diff.rs  test_lz_parity.rs  test_roundtrip_fasta.rs  test_segment.rs  test_splitters.rs  test_streaming_corruption.rs  test_streaming_pipeline.rs  test_streaming_queue.rs  test_streaming_queue_real_data.rs  test_streaming_queue_real_data.rs.disabled  test_streaming_roundtrip.rs  test_subsequence.rs  test_varint.rs  unified_iterator.rs  unified_iterator.rs.disabled
ragc-reader/: Cargo.toml
ragc-reader/src/: decompressor.rs  lib.rs  lz_decode.rs  segment_decompression.rs
ragc-writer/: Cargo.toml
ragc-writer/src/: _compressor_streaming_old.rs  bloom_filter.rs  compressor.rs  contig_compression.rs  contig_iterator.rs  decompressor.rs  genome_io.rs  kmer.rs  kmer_extract.rs  lib.rs  lz_diff.rs  lz_matcher.rs  memory_bounded_queue.rs  priority_queue.rs  segment.rs  segment_buffer.rs  segment_compression.rs  splitters.rs  streaming_compressor_queue.rs  task.rs  tuple_packing.rs  worker.rs  zstd_pool.rs
scripts/: build_cost_verifier.sh  compare_agc_ragc.sh  compare_chrV_layout.sh  compare_group_kmers.sh  compare_layout_all.sh  compare_segments.sh  cost_verifier.cpp  dump_groups.sh  profile_allocators.sh  profile_memory.sh  test_boundary_micro.sh  test_buffer_optimization.sh  test_compression_suite.py  test_cpp_agc_compatibility.sh  test_get_part_micro.sh  test_kmer_compatibility.sh  test_kmer_micro.sh  test_kmer_pair_micro.sh  test_revcomp_micro.sh  test_segment_split_micro.sh  test_splitter_check_micro.sh  test_thread_counts.sh  test_zstd_pooling.sh  verify_byte_identical.sh
test-data/: fasta_cpp.txt  hash_reference.txt  kmer_extract_rust.txt  kmer_rust.txt  lz_diff_rust.txt  test_simple.fasta  varint_cpp.txt
test_minimal/: AEL2_chrI.fa  AEL_2_chrV.fa  AIF_2_chrV.fa  ALI_2_chrV.fa  CKB_1_chrV.fa  CLL_1_chrV.fa  yeast5_chrV.fa
(+7 files in other folders)
