[workspace]
members = [
    "ragc-core",
    "ragc-reader",
    "ragc-writer",
    "ragc-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/ekg/ragc"
homepage = "https://github.com/ekg/ragc"
documentation = "https://docs.rs/ragc"
readme = "README.md"
keywords = ["bioinformatics", "genomics", "compression", "agc"]
categories = ["compression", "science"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }

# Compression
zstd = "0.13"
flate2 = "1.1"

# Hashing and collections
seahash = "4.1"
ahash = "0.8"
hashbrown = "0.16"
dashmap = "6.1"

# Parallel processing
rayon = "1.11"
crossbeam = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Memory mapping
memmap2 = "0.9"

# Testing
proptest = "1.9"

# Hashing for tests
sha2 = "0.10"

# CPU detection
num_cpus = "1.17"
