[package]
name = "ragc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for the ragc AGC genome compression tool"

[[bin]]
name = "ragc"
path = "src/main.rs"

[[bin]]
name = "split_fasta"
path = "src/bin/split_fasta.rs"

[dependencies]
# Local dependencies
ragc-core = { path = "../ragc-core", version = "0.1.0" }
ragc-reader = { path = "../ragc-reader", version = "0.1.0" }
ragc-writer = { path = "../ragc-writer", version = "0.1.0" }

# Workspace dependencies
clap = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
flate2 = { workspace = true }

# Optional: Alternative memory allocators
tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = []
jemalloc = ["tikv-jemallocator"]
