[package]
name = "ragc-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
bincode = { workspace = true }
ahash = { workspace = true }
hashbrown = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
zstd = { workspace = true }

# Direct dependencies
byteorder = "1.5"
